# rummagene

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  graphql.config.yml  helper.py  ingest.py  next.config.js  package-lock.json  package.json  plpy.py  requirements.txt  tailwind.config.js  tsconfig.json
ETL/: compute_signatures.py  create_meta_dict.py  helper.py  process_ARCHS4.py  requirements.txt
bot/: Dockerfile  README.md  bot.sh  clean.py  deps.txt  download_extract.py  helper.py  requirements.txt
bot/helper/: __main__.py  utils.py
db/: Dockerfile  deps.txt  plpy.py  requirements.txt  schema.sql  sigcomlite.py  test_sigcomlite.py
db/docker-entrypoint-initdb.d/: plrust-config.sh  search-paths.sh
db/migrations/: 20230729193513_core.sql  20230828144957_pmc_info.sql  20230830165721_view_geneset_genes.sql  20230830171356_geneset_len_pmc_to_terms.sql  20230830210011_term_search_count.sql  20230906154745_simplifications.sql  20230908003050_rust_accel.sql  20230918153613_api_enrich.sql  20230919195910_pmc_tracking.sql  20230920195024_tracking.sql  20230920201419_oldest_background.sql  20230925141013_nogenes_mapped.sql  20230925165804_orderby_created.sql  (+20 more)
enrich/: Cargo.toml  Dockerfile
enrich/src/: async_rwlockhashmap.rs  bitvec.rs  fastfisher.rs  main.rs  tsvector.rs
figures/: .gitignore  Makefile  README.md  assemble_enrichr_gmt.py  clean_gmt.py  collect_citations.py  common.py  compute_joint_umap.py  compute_umap.py  create_tf_kinase_gsl.py  download_enrichr_db.py  fig1.py  fig2.py  fig2e-f.py  fig2e-h.py  fig2g-h.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  gene_lookup.py  requirements.txt  similarity_matrices.py
graphql/: Dockerfile  package-lock.json  package.json  postgraphile.js
postgres/: Dockerfile  requirements.txt
(+79 files in other folders)
