[package]
name = "enrich"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
bit-set = "0.5.3"
bit-vec = "0.6.3"
uuid = "1.4.1"
fishers_exact = "1.0.1"
adjustp = "0.1.4"
serde = "1.0"
rayon = "1.7"
futures = "0.3"
async-std = "1.12"

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["uuid"]
