[package]
name = "enrich"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
uuid = "1.4.1"
adjustp = "0.1.4"
serde = "1.0"
rayon = "1.7"
futures = "0.3"
async-lock = "2.8"
retainer = "0.3"
tikv-jemallocator = "0.5.0"
num = "0.4"

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["uuid"]
